--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,30 @@
+@font-face {
+  font-family: iransans;
+  src: url(../src/assets/fonts/IRANSans\(FaNum\).ttf),
+    url(../src/assets/fonts/IRANSans\(FaNum\)_Bold.ttf),
+    url(../src/assets/fonts/IRANSans\(FaNum\)_Light.ttf),
+    url(../src/assets/fonts/IRANSans\(FaNum\)_Medium.ttf),
+    url(../src/assets/fonts/IRANSans\(FaNum\)_UltraLight.ttf);
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "iransans", sans-serif;
+  direction: rtl;
+  text-align: right;
+}
+
+input {
+  outline: none;
+}
+
+input:focus {
+  outline: none;
+}
+
 .App {
   text-align: center;
 }
@@ -37,7 +64,27 @@
   }
 }
 
-.body {
-  height: 100vh;
-  min-height: 100vh;
+/********** colors ***********/
+.bg-green {
+  background-color: #5abf38;
+}
+
+.bg-purple {
+  background-color: #8e3e98;
+}
+
+.login-pic {
+  background-image: url("assets/images/login-pic.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 70%;
+}
+
+.login-content {
+  width: 30%;
+}
+
+.login-container {
+  background-image: linear-gradient(#5abf384f, #8e3e984f);
 }
